@@ -273,6 +273,30 @@ if ( ! function_exists( 'desk_mess_mirrored_setup' ) ) {
     }
 }
 
+/**
+ * DMM Use Posted
+ *
+ * This returns a URL to the post using the anchor text posted in the meta
+ * details, or returns the word posted if the post title exists
+ *
+ * @package Desk_Mess_Mirrored
+ * @since   2.0
+ *
+ * @internal If no title exists, the CSS wrapper class `no-title` is used on the returned string text
+ *
+ * @return string
+ */
+if ( ! function_exists( 'dmm_use_posted' ) ) {
+    function dmm_use_posted() {
+            $dmm_no_title = get_the_title();
+            empty( $dmm_no_title )
+                    ? $dmm_no_title = '<a href="' . get_permalink() . '" title="' . the_title_attribute( array( 'before' => 'Permalink to: ', 'after' => '', 'echo' => '1' ) ) . '"><span class="no-title">' . __( 'Posted', 'desk-mess-mirrored' ) . '</span></a>'
+                    : $dmm_no_title = __( 'Posted', 'desk-mess-mirrored' );
+            return $dmm_no_title;
+    }
+}
+// End: DMM Use Posted
+
 if ( ! function_exists( 'bns_modified_post' ) ) {
     /**
      * BNS Modified Post
